--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Строительство современных модульных домов в Екатеринбурге от Феникс Груп. Проектирование, монтаж под ключ и высокое качество. Узнайте цену на ваш новый дом!" />
     <title>Модульные Дома | Феникс груп - Екатеринбург</title>
     <meta name="yandex-verification" content="462a522334ad47e2" />
     <link rel="stylesheet" href="style.css">
