--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Модульные Дома | Феникс груп - Екатеринбург</title>
     <meta name="yandex-verification" content="462a522334ad47e2" />
     <link rel="stylesheet" href="style.css">
-    
+    <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
@@ -370,8 +370,8 @@
                 <div class="contact-info">
                     <h3>Наши контакты</h3>
                     <address>
-                        <p><strong>📞 Телефон:</strong> <a href="tel:+79001234567">+7 (950) 451-11-14</a></p>
-                        <p><strong>📧 Email:</strong> <a href="mailto:info@phoenixgroup.ru">phoenixgroupekb@mail.ru</a></p>
+                        <p><strong>📞 Телефон:</strong> <a href="tel:+79504511114">+7 (950) 451-11-14</a></p>
+                        <p><strong>📧 Email:</strong> <a href="mailto:phoenixgroupekb@mail.ru">phoenixgroupekb@mail.ru</a></p>
                         <p><strong>📍 Адрес производства:</strong> г. Екатеринбург, ул.Горнощитская, 42 (Колхозный Двор)</p>
                         <p><strong>Всегда рады вашему звонку!</p>
                     </address>
