--- a/index.html
+++ b/index.html
@@ -420,5 +420,46 @@
     </div>
 
     <script src="script.js"></script> 
+<script>
+document.addEventListener('DOMContentLoaded', function() {
+    const form = document.querySelector('.contact-form');
+    
+    if (form) {
+        form.addEventListener('submit', function(e) {
+            e.preventDefault();
+
+            // Твои данные
+            const token = "8538881535:AAG-2Q2ONQ6ozFdfmSk-DbWvbFSIdnHc7qE";
+            const chat_id = "6765147268"; // 
+
+            // Сбор данных из полей
+            const name = this.querySelector('input[type="text"]').value;
+            const phone = this.querySelector('input[type="tel"]').value;
+            const message = this.querySelector('textarea').value;
+
+            // Формирование текста
+            const text = `🚀 Новая заявка "Феникс Груп"!\n\n👤 Имя: ${name}\n📞 Тел: ${phone}\n💬 Сообщение: ${message}`;
+            
+            // Ссылка для запроса к Telegram API
+            const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(text)}`;
+
+            // Отправка запроса
+            fetch(url)
+                .then(response => {
+                    if (response.ok) {
+                        alert('Спасибо! Заявка отправлена, мы скоро свяжемся с вами.');
+                        this.reset(); // Очистить форму
+                    } else {
+                        alert('Произошла ошибка. Попробуйте написать нам в WhatsApp.');
+                    }
+                })
+                .catch(error => {
+                    alert('Ошибка сети. Проверьте интернет-соединение.');
+                });
+        });
+    }
+});
+</script>
+
 </body>
 </html>
