--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@ document.addEventListener('DOMContentLoaded', function() {
             e.preventDefault();
 
             // Твои данные
-            const token = "8538881535:AAG-2Q2ONQ6ozFdfmSk-DbWvbFSIdnHc7qE";
+            const token = "8538881535:AAG-2Q2ONQ6ozFdfmSk-DbWvbFSIduHc7qE";
             const chat_id = "6765147268"; // 
 
             // Сбор данных из полей
@@ -450,7 +450,7 @@ document.addEventListener('DOMContentLoaded', function() {
                         alert('Спасибо! Заявка отправлена, мы скоро свяжемся с вами.');
                         this.reset(); // Очистить форму
                     } else {
-                        alert('Произошла ошибка. Попробуйте написать нам в WhatsApp.');
+                        alert('Произошла ошибка. Попробуйте написать нам в Telegram.');
                     }
                 })
                 .catch(error => {
