--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <h3>Планировка Standart</h3>
                                 <ul class="features-list">
                                 <li>● Наружняя отделка: имитация бруса 135мм с покраской</li>
-                                <li>● Внутреняя отделка:пол-фанера 20мм, линолеум. Стены/потолок-вагонка штиль</li>
+                                <li>● Внутренняя отделка:пол-фанера 20мм, линолеум. Стены/потолок-вагонка штиль</li>
                                 <li>● Потолок - 2.3/2.7м<li>
                                 <li>● Светильники и розетки:8/8шт</li>
                                 <li>● Коммуникации под сантехнику и канализацию</li>
@@ -169,7 +169,7 @@
                                 <h3>Планировка Comfort</h3>
                                 <ul class="features-list">
                                 <li>● Наружняя отделка: имитация бруса 185мм с покраской</li>
-                                <li>● Внутреняя отделка:пол-фанера 20мм, ламинат. Стены/потолок-имитация 135мм/вагонка штиль 110мм с покраской</li>
+                                <li>● Внутренняя отделка:пол-фанера 20мм, ламинат. Стены/потолок-имитация 135мм/вагонка штиль 110мм с покраской</li>
                                 <li>● Потолок - 2.7/3.1м<li>
                                 <li>● Светильники и розетки:на ваш выбор</li>
                                 <li>● Коммуникации под сантехнику и канализацию</li>
@@ -224,7 +224,7 @@
                                 <h3>Планировка Comfort Plus+</h3>
                                 <ul class="features-list">
                                 <li>● Наружняя отделка: имитация бруса 185мм с покраской</li>
-                                <li>● Внутреняя отделка:пол-фанера 20мм, ламинат. Стены/потолок-имитация 135мм с покраской</li>
+                                <li>● Внутренняя отделка:пол-фанера 20мм, ламинат. Стены/потолок-имитация 135мм с покраской</li>
                                 <li>● Потолок - 2.7/3.1м<li>
                                 <li>● Светильники и розетки:на ваш выбор</li>
                                 <li>● Коммуникации под сантехнику и канализацию</li>
@@ -257,7 +257,7 @@
                                      data-caption="Вечерний вид дома Альфа">
                             </div>
                             <h3>Barn House</h3>
-                            <p>Просторный дом в традиционном американском стиле но с современным харрактером.    Общая площадь: от 72 м². Срок: 40+ дней.</p>
+                            <p>Просторный дом в традиционном американском стиле но с современным характером.    Общая площадь: от 72 м². Срок: 40+ дней.</p>
                             <ul class="features-list">
                                 <li>● Утепление Isobox пол/стены/потолок-200/150/200мм</li>
                                 <li>● Деревянный каркас камерной сушки с биологической пропиткой</li>
@@ -278,12 +278,12 @@
                                 <h3>Планировка Barn House</h3>
                                 <ul class="features-list">
                                 <li>● Наружняя отделка: имитация бруса 185мм с покраской, профнастил/кликфальц</li>
-                                <li>● Внутреняя отделка:пол-фанера 22мм, ламинат. Стены/потолок-имитация 135мм с покраской</li>
+                                <li>● Внутренняя отделка:пол-фанера 22мм, ламинат. Стены/потолок-имитация 135мм с покраской</li>
                                 <li>● Потолок - 3/4м<li>
                                 <li>● Светильники и розетки:на ваш выбор</li>
                                 <li>● Коммуникации под сантехнику и канализацию</li>
                                 <li>● Электрощит и фурнитура</li>
-                                <li>● Панарамные окна и двери (5-ти камерные)</li>
+                                <li>● Панорамные окна и двери (5-ти камерные)</li>
                             </div>
                             <button class="btn close-plan-btn flip-btn" data-model="Альфа">
                                 Скрыть планировку Barn House
@@ -373,7 +373,7 @@
                         <p><strong>📞 Телефон:</strong> <a href="tel:+79504511114">+7 (950) 451-11-14</a></p>
                         <p><strong>📧 Email:</strong> <a href="mailto:phoenixgroupekb@mail.ru">phoenixgroupekb@mail.ru</a></p>
                         <p><strong>📍 Адрес производства:</strong> г. Екатеринбург, ул.Горнощитская, 42 (Колхозный Двор)</p>
-                        <p><strong>Всегда рады вашему звонку!</p>
+                        <p><strong>Всегда рады вашему звонку!</strong></p>
                     </address>
                     
                     <p class="working-hours">
@@ -428,34 +428,31 @@ document.addEventListener('DOMContentLoaded', function() {
         form.addEventListener('submit', function(e) {
             e.preventDefault();
 
-            // Твои данные
-            const token = "8538881535:AAG-2Q2ONQ6ozFdfmSk-DbWvbFSIduHc7qE";
-            const chat_id = "6765147268"; // 
+            // Собираем данные из полей
+            const formData = {
+                name: this.querySelector('#name').value,
+                phone: this.querySelector('#phone').value,
+                message: this.querySelector('#message').value
+            };
 
-            // Сбор данных из полей
-            const name = this.querySelector('input[type="text"]').value;
-            const phone = this.querySelector('input[type="tel"]').value;
-            const message = this.querySelector('textarea').value;
-
-            // Формирование текста
-            const text = `🚀 Новая заявка "Феникс Груп"!\n\n👤 Имя: ${name}\n📞 Тел: ${phone}\n💬 Сообщение: ${message}`;
-            
-            // Ссылка для запроса к Telegram API
-            const url = `https://api.telegram.org/bot${token}/sendMessage?chat_id=${chat_id}&text=${encodeURIComponent(text)}`;
-
-            // Отправка запроса
-            fetch(url)
-                .then(response => {
-                    if (response.ok) {
-                        alert('Спасибо! Заявка отправлена, мы скоро свяжемся с вами.');
-                        this.reset(); // Очистить форму
-                    } else {
-                        alert('Произошла ошибка. Попробуйте написать нам в Telegram.');
-                    }
-                })
-                .catch(error => {
-                    alert('Ошибка сети. Проверьте интернет-соединение.');
-                });
+            // Отправляем данные на твой серверный скрипт
+            fetch('send.php', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify(formData)
+            })
+            .then(response => {
+                if (response.ok) {
+                    alert('Заявка успешно отправлена!');
+                    this.reset();
+                } else {
+                    alert('Ошибка при отправке. Попробуйте связаться с нами напрямую.');
+                }
+            })
+            .catch(err => {
+                console.error('Ошибка:', err);
+                alert('Ошибка сети. Проверьте интернет-соединение.');
+            });
         });
     }
 });
