--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Строительство современных модульных домов в Екатеринбурге от Феникс Груп. Проектирование, монтаж под ключ и высокое качество. Узнайте цену на ваш новый дом!" />
     <title>Модульные Дома | Феникс груп - Екатеринбург</title>
-    <meta name="yandex-verification" content="462a522334ad47e2" />
+    <meta name="yandex-verification" content="462a522334ad47e2">
+    <meta name="yandex-verification" content="b660d1bf7489c4c8">
+    <meta name="yandex-verification" content="d4c9703c549b1a73">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
